--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>   
 <project name="SchoolProject" default="test" basedir=".">
   <property name="main.build.dir" value="build/main" />  
-  <property name="main.src.dir" value="src" />
+  <property name="main.src.dir" value="Project/src" />
   <property name="test.build.dir" value="build/test" />
   <property name="test.src.dir" value="test" />
 
