--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
     <echo message="Build done" />
   </target>
    
-  <!-- Test and build all files  -->
+  <!-- FirstPackage.SomeTestClass and build all files  -->
   <!-- To run this: use "ant" (default) or "ant run" -->
   <target name="run" depends="build">
     <junit printsummary="on" haltonfailure="yes">
@@ -41,7 +41,7 @@
         </classpath>
         <formatter type="brief" usefile="false" />
         <batchtest>
-            <fileset dir="${test.src.dir}" includes="**/*Test*.java" />
+            <fileset dir="${test.src.dir}" includes="**/*FirstPackage.SomeTestClass*.java" />
         </batchtest>
     </junit>
   </target>
